options for creating new post

--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -31,6 +31,7 @@
                         {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <!--checkbox saying remember me-->
                 <div class="form-check">
                     {{ form.remember(class="form-check-input") }}
                     {{ form.remember.label(class="form-check-label") }}
