--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,4 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>About Page</h1>
+
+    <h3>This is a simple blog website made using flask</h3>
+
+    
+    <p>
+        <a href="https://www.linkedin.com/in/kunalsharma99/">
+            <img src='https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg' alt='linkedin' height='40'>
+        </a>   
+        <a href="https://github.com/ksh168">
+            <img src='https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg' alt='website' height='40'>
+        </a>  
+    </p>
+
 {% endblock content %}
